<?xml version="1.0"?>
<package format="2">
  <name>pose_estimation</name>
  <version>0.0.1</version>
  <description>Package for ArUco marker detection using ROS and OpenCV</description>

  <maintainer email="syedmazhar6746@gmail.com">Your Name</maintainer>

  <license>MIT</license>

  <!-- ROS dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <!-- OpenCV dependency -->
  <build_depend>opencv</build_depend>
  <exec_depend>opencv</exec_depend>
  
  <!-- Eigen3 dependency -->
  <build_depend>eigen3</build_depend>
  <exec_depend>eigen3</exec_depend>

  <!-- Your package type -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
